# vivat

./: .dockerignore  .env.local  .gitignore  Dockerfile  __test.py  docker-compose.yaml  docker-compose.yml  pyproject.toml
app/: alembic.ini  bot_main.py  main.py  migrate.py  telegram_bot_main.py  test_data_generator.json  test_data_generator.py  vivat_data_generator.py
app/migrations/: env.py
app/migrations/versions/: 2025_07_07_12 03-1bb0d20c4ae5_initial_migration.py  2025_07_08_17 13-315f6116cf1a_add_working_hours_and_change_food.py  2025_07_16_13 44-c1b432f0904d_fix_food_and_restaurant_tables_add_city.py  2025_07_18_01 22-e3a64f7f3d59_fix.py  2025_07_24_14 01-054323605cfd_add_ondelete_change_columns.py  2025_07_30_17 33-7ee8c475498f_add_holiday_to_working_hours.py  2025_08_15_16 59-cbede47f7bc9_add_image_url_to_ingredient.py  2025_08_23_22 26-4c45b7d04be1_change_orderitem_relation_add_new_.py  2025_08_25_14 16-0aabb6b0bf4e_add_refreshtoken_change_user.py  2025_08_25_21 05-14154252d52a_fix.py  2025_08_30_11 05-bf09f8538801_add_quantity_to_order_item_add_order_.py  2025_09_01_17 35-24b834b30b79_fix.py  2025_09_24_11 27-e6144d5eae9f_edit_useraddress_nullable_remove_is_.py  2025_09_24_23 51-a1aa47302532_edit_useraddress_nullable.py  2025_09_26_00 02-d45fd061541c_all_prices_to_int.py  2025_10_06_19 51-b6e99bc0da7c_add_telegram_chat_table.py  (+5 more)
app/src/: config.py  exceptions.py  logger.py  middleware.py
deploy/: docker-compose.yaml
nginx/: vivat-alushta-docker.ru  vivat-alushta-local.ru
nginx/conf.d/: default.conf
scripts/: add_test_data.sh  create_tables.sh
(+126 files in other folders)
